add basic structure html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MCP</title>
-    <meta name="description" content="Milestone 1 - MCP"/>
+    <meta name="description" content="Milestone 1 - MCP Moringa Cipta Pratama"/>
     <meta name="keywords" content="HTML, CSS, JavaScript"/>
     <meta name="author" content="Ahlan Hanan Wijaya"/>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    
+    <header class="container">
+        <div class="logo">
+            <img src="./assets/images/logo1.png" alt="logo mcp">
+        </div>
+
+        <nav>
+            <ul>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Jasa</a></li>
+                <li><a href="#">Tentang</a></li>
+            </ul>
+        </nav>
+
+        <div class="sign">
+            <a href="#">Sign In</a>
+            <a href="#">Sign Up</a>
+            <button id="hamburger">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                  </svg>
+            </button>
+        </div>
+    </header>
+
+    <div class="nav-mobile d-none">
+        <nav>
+            <ul>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Jasa</a></li>
+                <li><a href="#">Tentang</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <main class="container">
+        <div class="hero-image">
+            <section class="hero-text">
+                <h1>Moringa Creative</h1>
+                <p><span>Animasi, Desain Grafis, Desain Web, Multimedia</span></p>
+            </section>
+        </div>
+
+        <div class="banner">
+            <div class="banner-main">
+                <div class="banner-right">
+                    <h2>Halo.</h2>
+                    <p>Kami adalah <span>MCP</span>, penyedia jasa multimedia yang bertempat di Yogyakarta, Indonesia. Kami fokus pada pengembangan animasi, desain grafis, desain web, multimedia. Selain itu kami juga membuat konten video di youtube yang membahas tips seputar multimedia.</p>
+                </div>
+                <div class="banner-left">
+                    <img src="./assets/images/abutimg.png" alt="about image"> 
+                </div>
+            </div>
+        </div>
+
+
+    </main>
+
+
+
+
+
+
+    <footer class="container">
+        <div>
+            <ul>
+                <li><a href="#">Kebijakan Privasi</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>Moringa Cipta Pratama</p>
+            <p>Copyright &#169 2023</p>
+        </div>
+        <div>
+            <ul>
+                <li><a href="#">Designed by Hananjaya</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
