add contact details

--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
         <div class="logo">
             <img src="./assets/images/logomcp0.png" alt="logo mcp">
         </div>
-
         <nav>
             <ul>
-                <li><a href="#">Tentang</a></li>
-                <li><a href="#">Layanan</a></li>
-                <li><a href="#">Portofolio</a></li>
-                <li><a href="#">Pemesanan</a></li>
-                <li><a href="#">Kontak</a></li>
+                <li><a href="#">TENTANG</a></li>
+                <li><a href="#">LAYANAN</a></li>
+                <li><a href="#">PORTOFOLIO</a></li>
+                <li><a href="#">PEMESANAN</a></li>
+                <li><a href="#">KONTAK</a></li>
             </ul>
         </nav>
-
         <div class="sign">
-            <a href="#">Sign In</a>
-            <a href="#">Sign Up</a>
+            <a href="#">SIGN IN</a>
+            <a href="#">SIGN UP</a>
             <button id="hamburger">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
@@ -40,11 +38,11 @@
     <div class="nav-mobile d-none">
         <nav>
             <ul>
-                <li><a href="#">Tentang</a></li>
-                <li><a href="#">Layanan</a></li>
-                <li><a href="#">Portofolio</a></li>
-                <li><a href="#">Pemesanan</a></li>
-                <li><a href="#">Kontak</a></li>
+                <li><a href="#">TENTANG</a></li>
+                <li><a href="#">LAYANAN</a></li>
+                <li><a href="#">PORTOFOLIO</a></li>
+                <li><a href="#">PEMESANAN</a></li>
+                <li><a href="#">KONTAK</a></li>
             </ul>
         </nav>
     </div>
@@ -53,7 +51,7 @@
         <div class="hero-image">
             <section class="hero-text">
                 <h1>MCP</h1>
-                <p><span>"Your Creative Partner". </span></p>
+                <p><span>"Your Creative Partner"</span></p>
             </section>
         </div>
 
@@ -91,8 +89,8 @@
             </div>
         </div>
 
+        
     </main>
-
 
     <div class="top">
         <button onclick="topFunction()" id="myBtn" title="Go to top">
@@ -101,6 +99,35 @@
               </svg>
           </button>
     </div>
+
+    <section class="contact">
+        <div class="contach-left">
+            <div class="contactmcp">
+                <img src="./assets/images/contactmcp.png" alt="contact mcp">
+            </div>
+            <div class="alamat">
+                <p>Jln. Pelemsari KG 1- 571/A <p>
+                <p>Peleman, Rejowinangun, Kotagede, Kota Yogyakarta, Daerah Istimewa Yogyakarta 55171</p>
+            </div>
+        </div>
+        <div class="contact-mid">
+            <div class="gmail">
+                <p>gmail</p>
+            </div>
+            <div class="instagram">
+                <p>Instagram <p>
+            </div>
+            <div class="whatsapp">
+                <p>WhatsApp <p>
+            </div>
+        </div>
+        <div class=contact-right>
+            <div class="maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1175.164239679402!2d110.3951065043729!3d-7.8146202240725415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57d72bf89cd7%3A0xbc266dee7633d54e!2sCV.%20Moringa%20Cipta%20Pratama!5e0!3m2!1sid!2sid!4v1689339041122!5m2!1sid!2sid" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        <div>
+    </section>
+
 
     <footer class="container">
         <div>
